<resources>
    <string name="app_name">screen_2</string>
    <string name="message">Message</string>
    <string name="recipients">Recipients</string>
    <string name="amount">Amount</string>
    <string name="transfer_details">Transfer Details</string>
    <string name="payment_request">Payment Request</string>
    <string name="_10_00">€10.00</string>
    <string name="confirm">Confirm</string>
</resources>