<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginStart="7dp"
        android:layout_marginTop="28dp"
        android:id="@+id/back_arrow_icon"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="24dp"
        android:layout_height="28dp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:lineSpacingExtra="3sp"
        android:text="@string/recipients"
        android:id="@+id/recipients_tv"
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_arrow_icon" />


    <androidx.cardview.widget.CardView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipients_tv"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="40dp"
        android:id="@+id/woman_image_cardview"
        android:layout_marginTop="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@mipmap/woman_image"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:layout_constraintStart_toEndOf="@id/woman_image_cardview"
        app:layout_constraintTop_toBottomOf="@id/recipients_tv"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="40dp"
        android:layout_marginTop="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@mipmap/woman_image"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </androidx.cardview.widget.CardView>



    <TextView
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/amount_tv"
        android:layout_width="0dp"
        android:id="@+id/transfer_tv"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/woman_image_cardview"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:lineSpacingExtra="3sp"
        android:text="@string/transfer_details"/>





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:lineSpacingExtra="3sp"
        android:gravity="end"
        android:text="@string/amount"
        android:id="@+id/amount_tv"
        app:layout_constraintStart_toEndOf="@id/transfer_tv"
        app:layout_constraintBottom_toBottomOf="@id/transfer_tv"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        app:layout_constraintStart_toStartOf="@id/transfer_tv"
        app:layout_constraintTop_toBottomOf="@id/transfer_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="normal"
        android:textSize="15sp"
        android:id="@+id/payment_tv"
        android:textColor="@color/text_color"
        android:letterSpacing="0"
        app:layout_constraintEnd_toStartOf="@id/amount_number_tv"
        android:lineSpacingExtra="5sp"
        android:text="@string/payment_request"/>


    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/amount_tv"
        app:layout_constraintBottom_toBottomOf="@id/payment_tv"
        app:layout_constraintStart_toEndOf="@id/payment_tv"
        android:id="@+id/amount_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textColor="@color/text_color"
        android:letterSpacing="0"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="5sp"
        android:gravity="end"
        android:text="@string/_10_00"/>


    <View
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/message_cardview"
        android:background="@drawable/line_shape"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/message_cardview"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="116dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:paddingStart="10dp"
            android:hint="@string/message"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="36dp"
             />


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toEndOf="@id/message_cardview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:textStyle="normal"
            android:textSize="15sp"
            android:letterSpacing="0"
            android:lineSpacingExtra="5sp"
            android:gravity="center"
            android:text="@string/confirm"
            android:paddingHorizontal="8dp"
            android:textColor="@color/dark"
            android:background="@color/button_background"
            android:drawableEnd="@drawable/subtraction_20"
            android:layout_width="match_parent"
            android:layout_height="36dp"/>



    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>